# iot-manager

./: .gitignore  .prettierignore  AGENT.md  CLAUDE.md  CMakeLists.txt  README.md  biome.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vcpkg.json  vite.config.ts
.github/workflows/: build.yml
agent/: Agent.Config.hpp  AgentCapabilities.hpp  AgentDataStore.hpp  AgentModbusPoller.hpp  AgentNetworkConfigurator.hpp  AgentProtocolEngine.hpp  AgentRuntime.hpp  AgentShellManager.hpp  CMakeLists.txt  L2ConfigBridge.hpp  SerialLinkManager.hpp  main.cpp
cmake/: toolchain-armv7l.cmake
config/: agent.example.json  config.example.json  config.json
docs/: modular-architecture.md  protocol-lifecycle.md  s7-protocol-quickstart.md  s7-protocol-reference.md
edgenode/: CMakeLists.txt  EdgeNode.Config.hpp  EdgeNodeCapabilities.hpp  EdgeNodeDataStore.hpp  EdgeNodeL2ConfigBridge.hpp  EdgeNodeModbusPoller.hpp  EdgeNodeNetworkConfigurator.hpp  EdgeNodeProtocolEngine.hpp  EdgeNodeRuntime.hpp  EdgeNodeS7Poller.hpp  EdgeNodeSerialLinkManager.hpp  EdgeNodeShellManager.hpp  main.cpp
l2config/: CMakeLists.txt  L2ConfigApp.hpp  L2TcpTunnel.hpp  L2Transport.hpp  main.cpp
ports/snap7/: CMakeLists.txt  vcpkg.json
server/: main.cpp  pch.hpp
server/app/: ApplicationModule.hpp  RuntimeModules.hpp  ServerBootstrapper.hpp
server/common/agent/: AgentBridgeManager.hpp  AgentProtocol.hpp
server/common/cache/: AuthCache.hpp  DeviceCache.hpp  DeviceConnectionCache.hpp  RealtimeDataCache.hpp  ResourceVersion.hpp
server/common/database/: DatabaseInitializer.hpp  DatabaseService.hpp  IotDataService.hpp  RedisChecker.hpp  RedisService.hpp  TransactionGuard.hpp
server/common/domain/: Aggregate.hpp  Domain.hpp  DomainEvent.hpp  EventBus.hpp
server/common/edgenode/: AgentBridgeManager.hpp  AgentProtocol.hpp
server/common/filters/: AuthFilter.hpp  PermissionFilter.hpp  RequestAdvices.hpp  RequestLogFilter.hpp  ResourcePermission.hpp
server/common/l2config/: L2Protocol.hpp
server/common/network/: LinkState.hpp  LinkTransportFacade.hpp  TcpLinkManager.hpp  WebSocketManager.hpp
server/common/protocol/: FrameResult.hpp  ParsedResult.hpp  PollScheduler.hpp  ProtocolAdapter.hpp  ProtocolCommandCoordinator.hpp  ProtocolCommandStore.hpp  ProtocolDispatcher.hpp  ProtocolJobQueue.hpp  ProtocolLog.hpp  ProtocolResultWriter.hpp
server/common/utils/: AppException.hpp  ConfigManager.hpp  Constants.hpp  ControllerMacros.hpp  CoroutineExecutor.hpp  DeviceConnectionStateHelper.hpp  DeviceSummaryHelper.hpp  DrogonLoopSelector.hpp  ErrorCodes.hpp  ExceptionHandler.hpp  FieldHelper.hpp  JsonHelper.hpp  JwtUtils.hpp  LinkHelper.hpp  LoggerManager.hpp  OperationFieldHelper.hpp  Pagination.hpp  PasswordUtils.hpp  PlatformUtils.hpp  Response.hpp  SqlHelper.hpp  StringUtils.hpp  TimestampHelper.hpp  TreeBuilder.hpp  ValidatorHelper.hpp
server/migration/: MigrationEngine.hpp  MigrationFileLoader.hpp  MigrationStateManager.hpp  MigrationTypes.hpp  MigrationVersionParser.hpp
server/modules/agent/: Agent.Controller.hpp  Agent.Service.hpp
server/modules/alert/: Alert.Controller.hpp  Alert.Service.hpp  AlertEngine.hpp
server/modules/device/: Device.Controller.hpp  Device.Service.hpp  DeviceDataTransformer.hpp
server/modules/device-group/: DeviceGroup.Controller.hpp  DeviceGroup.Service.hpp
server/modules/edgenode/: EdgeNodeController.hpp  EdgeNodeService.hpp
server/modules/gb28181/: Gb28181Module.cpp  Gb28181Module.hpp
server/modules/home/: Home.Controller.hpp  Home.Service.hpp
server/modules/link/: Link.Controller.hpp  Link.Service.hpp
server/modules/open/: OpenAccess.Controller.hpp  OpenAccess.DataTransformer.hpp  OpenAccess.Repository.hpp  OpenAccess.Shared.hpp  OpenWebhookDispatcher.hpp  OpenWebhookEventHandlers.hpp
server/modules/protocol/: ProtocolConfig.Controller.hpp  ProtocolConfig.Service.hpp  ProtocolConfigValidator.hpp
server/modules/system/: Auth.Controller.hpp  Auth.Service.hpp  Department.Controller.hpp  Department.Service.hpp  Menu.Controller.hpp  Menu.Service.hpp  Role.Controller.hpp  Role.Service.hpp  User.Controller.hpp  User.Service.hpp
server/modules/websocket/: AgentWebSocket.Controller.hpp  EdgeNodeWebSocket.Controller.hpp  WebSocket.Controller.hpp  WsEventHandlers.hpp
tests/: CMakeLists.txt  TEST_STRATEGY.md  run_tests.sh  s7_packet_shape_test.cpp  s7_test.cpp
tests/e2e/migration/: MigrationE2ETest.cpp
tests/fixtures/migrations/: V001__baseline.up.sql
tests/helpers/: MockDbClient.hpp  TestDatabaseHelper.hpp
tests/integration/migration/: MigrationIntegrationTest.cpp
tests/unit/migration/: MigrationEngineTest.cpp  MigrationFileLoaderTest.cpp  MigrationStateManagerTest.cpp  MigrationVersionParserTest.cpp  ToParameterizedTest.cpp
tools/: dtu-simulator.mjs
triplets/: arm-linux.cmake  arm64-osx.cmake
web/: index.html  main.tsx
web/components/: AgentTerminal.tsx  AuthGuard.tsx  DeviceCard.tsx  DynamicIcon.tsx  EdgeNodeTerminal.tsx  ErrorBoundary.tsx  FallbackPage.tsx  ImagePreviewModal.tsx  LayoutBreadcrumb.tsx  PageContainer.tsx  PageLoading.tsx  PageTabs.tsx  PageTransition.tsx  RootTransition.tsx  StatusTag.tsx  index.ts
web/config/: index.ts  registry.ts
web/hooks/: index.ts  useCrudPermissions.ts  useDebounceFn.ts  useDynamicRoutes.ts  useHeartbeat.ts  useInitAuth.ts  usePermission.ts  useProtocolImportExport.ts  useResponsive.ts
web/layouts/: AdminLayout.tsx
web/lib/gb28181/: jessibucaFlvPlayer.d.ts  jessibucaFlvPlayer.js
web/pages/: Home.tsx  index.ts
web/pages/agent/: Agent.tsx
web/pages/alert/: Alert.tsx  (+3 more)
web/providers/: AntdMessageHolder.tsx  TanstackQuery.tsx  WebSocketProvider.tsx  index.ts
web/routes/: index.tsx
web/services/: index.ts
web/store/: hooks.ts  index.ts
web/styles/: index.css
web/types/: agent.ts  alert.ts  common.ts  device.ts  deviceGroup.ts  edgenode.ts  gb28181.ts  index.ts  link.ts  openAccess.ts  protocol.ts  zlmrtc-client.d.ts
web/utils/: animations.ts  dateTime.ts  deepEqual.ts  icon.tsx  index.ts  navigation.ts  pagination.ts  sentry.ts  text.ts  tree.ts  validators.ts
(+233 files in other folders)
